test/files/neg/t7131.check
t7131.scala:21: error: type mismatch;
 found   : Iterable[U]
 required: That
 Note: implicit method convertToSimpleMappable is not applicable here because it comes after the application point and it lacks an explicit result type
        x.value.map(f)
                   ^
one error found
